Adição de codigo de verificação por email, validações de login, e novas telas

--- a/BarberShop/appsettings.json
+++ b/BarberShop/appsettings.json
@@ -9,5 +9,5 @@
   "ConnectionStrings": {
     "BarberShopDb": "Server=tcp:guilherme14511dsv.database.windows.net,1433;Initial Catalog=BarberShopDb;Persist Security Info=False;User ID=gui14511;Password=Kratos14511@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
-  "SendGridApiKey": "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"
+  "SendGridApiKey": "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"
 }
