--- a/BarberShop/BarberShop.csproj
+++ b/BarberShop/BarberShop.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>721ab38a-e394-40b7-bb2f-a78212d0008c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
