--- a/BarberShop.Infrastructure/BarberShop.Infrastructure.csproj
+++ b/BarberShop.Infrastructure/BarberShop.Infrastructure.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
+    <PackageReference Include="Stripe.net" Version="46.2.2" />
   </ItemGroup>
 
   <ItemGroup>
