--- a/BarberShop.Application/BarberShop.Application.csproj
+++ b/BarberShop.Application/BarberShop.Application.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="RabbitMQ.Client" Version="7.0.0" />
     <PackageReference Include="SendGrid" Version="9.29.3" />
     <PackageReference Include="Stripe.net" Version="47.0.0" />
+    <PackageReference Include="X.PagedList.Mvc.Core" Version="10.5.7" />
   </ItemGroup>
 
   <ItemGroup>
