--- a/BarberShop.Domain/BarberShop.Domain.csproj
+++ b/BarberShop.Domain/BarberShop.Domain.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Stripe.net" Version="47.0.0" />
+    <PackageReference Include="X.PagedList.Mvc.Core" Version="10.5.7" />
   </ItemGroup>
 
 </Project>
