Ajustes e sistema de notificação no celular

--- a/BarberShop.Application/BarberShop.Application.csproj
+++ b/BarberShop.Application/BarberShop.Application.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="RabbitMQ.Client" />
     <PackageReference Include="SendGrid" />
     <PackageReference Include="Stripe.net" />
+    <PackageReference Include="WebPush" />
     <PackageReference Include="X.PagedList.Mvc.Core" />
   </ItemGroup>
   <ItemGroup>
