--- a/BarberShop.Domain/BarberShop.Domain.csproj
+++ b/BarberShop.Domain/BarberShop.Domain.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" />
     <PackageReference Include="Stripe.net" />
+    <PackageReference Include="WebPush" />
     <PackageReference Include="X.PagedList.Mvc.Core" />
   </ItemGroup>
 </Project>
