--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -24,6 +24,7 @@
     <PackageVersion Include="Swashbuckle.AspNetCore.Swagger" Version="7.0.0" />
     <PackageVersion Include="Swashbuckle.AspNetCore.SwaggerGen" Version="7.0.0" />
     <PackageVersion Include="Swashbuckle.AspNetCore.SwaggerUI" Version="7.0.0" />
+    <PackageVersion Include="WebPush" Version="1.0.12" />
     <PackageVersion Include="X.PagedList.Mvc.Core" Version="10.5.7" />
   </ItemGroup>
 </Project>
